some looping exercises

--- a/L03.md
+++ b/L03.md
@@ -123,6 +123,27 @@ Positional parameters contain the parameters from the command line.
 3. Use a `for f in *.c` loop to test whether each file exists. If it does
    exist it can be moved.
 
+
+## Loops
+1. Write a script that prints out information and statistics about a given
+   file.  Take a look at the manual pages for `ls`, `wc` and `stat`
+
+   ```shell-session
+   $ man ls
+   $ man wc 
+   $ man stat
+   ```
+   {: .example}
+
+2. Write a _wrapper_ script that takes a list of files, and uses the first
+   script to print out information about each one.
+	1. Use the `for a in $*` pattern for the loop.  Are there any quoting
+	   issues to be aware of?  Should `$@` be used instead?  (see Shotts page 444)
+    3. Use the `while`--`shift` pattern (Shotts page 442)
+
+3. Add one of these variants to the reporting program above.
+
+
 ## Command line Options
 Shell scripts are _almost never_ interactive.  Control of the script's
 behaviour is through command-line-options.  [Chapter 12 of the POSIX
@@ -167,3 +188,5 @@ done
    -o &lt;_objects_&gt;
    : a directory ro copy the `.o` files into
 
+   
+----
