sample solution scripts attached to L03

--- a/L03.md
+++ b/L03.md
@@ -119,9 +119,11 @@ Positional parameters contain the parameters from the command line.
 [examples.zip]({{site.baseurl}}{{site.raurl}}/examples.zip)
     {: .note}
 2. Use the `if...fi` statement to check if the directories exist (`[ -d $1 ]`
-   _etc_), if not create them.
+   _etc_), if not create them.  [[sample solution](https://gist.github.com/dr-alun-moon/bf6ff0f0c400333981e359ca30fe2693)]
 3. Use a `for f in *.c` loop to test whether each file exists. If it does
    exist it can be moved.
+	[[sample
+solution](https://gist.github.com/dr-alun-moon/a48583441fc7fc48dbff08463012d17c)]
 
 
 ## Loops
@@ -142,6 +144,7 @@ Positional parameters contain the parameters from the command line.
     3. Use the `while`--`shift` pattern (Shotts page 442)
 
 3. Add one of these variants to the reporting program above.
+ [[sample solution](https://gist.github.com/dr-alun-moon/59015cffb15f233fee01fbf1ef8c56cc)]
 
 
 ## Command line Options
@@ -188,5 +191,7 @@ done
    -o &lt;_objects_&gt;
    : a directory ro copy the `.o` files into
 
-   
+  [[A more comprehensive
+solution](https://gist.github.com/dr-alun-moon/683677abc4c6f9d44ffb2d5732727754)] 
+
 ----
